RESOLVED FIXED290134
DFG register allocation validation assertion is too strict
https://bugs.webkit.org/show_bug.cgi?id=290134
Summary DFG register allocation validation assertion is too strict
daniel_liu4
Reported 2025-03-20 15:47:12 PDT
Attachments
daniel_liu4
Comment 1 2025-03-20 15:50:40 PDT
EWS
Comment 2 2025-03-21 09:18:53 PDT
Committed 292478@main (b255b386ca4e): <https://commits.webkit.org/292478@main> Reviewed commits have been landed. Closing PR #42770 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.