DFG register allocation validation is too strict https://bugs.webkit.org/show_bug.cgi?id=290134 rdar://147244043

Reviewed by Yusuke Suzuki.

During DFG generation, we have assertions which check that we do not branch
over register allocations. However, these assertions sometimes fire wrongly
on cases where we allocate a register with no spills, followed by branching
to a slow path. This assertion should allow this case, since we do not skip
a register allocation.

This patch also removes some cases where we suppress validation, since this
change ensures that these no longer cause incorrect assertion failures.

* Source/JavaScriptCore/assembler/AbstractMacroAssembler.h:
(JSC::AbstractMacroAssembler::RegisterAllocationOffset::checkOffsets):
* Source/JavaScriptCore/dfg/DFGSpeculativeJIT.cpp:

Canonical link: https://commits.webkit.org/292478@main